[package]
name = "voice-dsp-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
loqa-voice-dsp = "0.5.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
